--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "git-commit-msg-linter": "^3.0.0",
     "prettier": "^2.1.2",
     "vercel": "^20.1.2"
   }
