--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "notion-page-to-html-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "start": "vercel dev",
     "deploy": "vercel deploy --prod"
@@ -18,6 +18,8 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "git-commit-msg-linter": "^3.0.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
     "vercel": "^20.1.2"
   }
