--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
+    "typescript": "^4.0.5",
     "vercel": "^20.1.2"
   }
 }
