--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "prettier": "^2.1.2",
     "typescript": "^4.0.5",
     "vercel": "^20.1.2"
+  },
+  "dependencies": {
+    "notion-page-to-html": "^1.0.2"
   }
 }
